add pin typescript to workflow

--- a/workflows/2020-06-23-add-dependabot/dependabot.yml
+++ b/workflows/2020-06-23-add-dependabot/dependabot.yml
@@ -9,3 +9,5 @@ updates:
     open-pull-requests-limit: 5
     pull-request-branch-name:
       separator: "-"
+    ignore:
+      - dependency-name: "typescript"
