only run on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,5 @@ workflows:
     jobs:
       - assert:
           context: org-global
-          # filters:
-            # branches: {only: master}
+          filters:
+            branches: {only: master}
