add oclif/core to sync-ci-configs && suspend windows on circleci for now

--- a/cron/leif.yml
+++ b/cron/leif.yml
@@ -88,6 +88,7 @@ workflows:
       - sync-node-engine
   sync-ci-configs:
     apply_to_repos:
+      - oclif/core
       # - oclif/plugin-autocomplete
       - oclif/plugin-commands
       - oclif/plugin-command-snapshot
