--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
           name: Run leif in dry-run mode
           command: |
             rm ~/.gitconfig
+            git config --global user.email "$GIT_EMAIL"
+            git config --global user.name "$GIT_USERNAME"
             npx leif --version
             npx leif run cron/leif.yml -d
 
